--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,12 @@ slack-sdk>=3.26.0
 # Notion API
 notion-client>=2.2.1
 
+# Gmail API
+google-auth>=2.22.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+google-api-python-client>=2.100.0
+
 # Data processing
 PyYAML>=6.0.1
 json-logging>=1.3.0
