--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,15 @@ google-auth-oauthlib>=1.0.0
 google-auth-httplib2>=0.1.0
 google-api-python-client>=2.100.0
 
+# OpenAI API
+openai>=1.0.0
+
+# LangChain
+langchain>=0.1.0
+langchain-openai>=0.1.0
+langchain-core>=0.1.0
+langgraph>=0.1.0
+
 # Data processing
 PyYAML>=6.0.1
 json-logging>=1.3.0
