--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,12 @@ google-api-python-client>=2.100.0
 # OpenAI API
 openai>=1.0.0
 
+# Anthropic API
+anthropic>=0.18.0
+
+# Google Generative AI
+google-generativeai>=0.8.0
+
 # LangChain
 langchain>=0.1.0
 langchain-openai>=0.1.0
@@ -27,3 +33,18 @@ langgraph>=0.1.0
 # Data processing
 PyYAML>=6.0.1
 json-logging>=1.3.0
+
+# Web scraping and automation
+selenium>=4.15.0
+webdriver-manager>=4.0.0
+beautifulsoup4>=4.12.0
+
+# Text processing and evaluation
+transformers>=4.35.0
+torch>=2.1.0
+bert-score>=0.3.13
+rouge-score>=0.1.2
+tqdm>=4.66.0
+
+# Audio processing
+wave>=0.0.2
