--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,21 @@
 # Core dependencies
-langchain>=0.1.0
-langchain-openai>=0.1.0
-langchain-community>=0.1.0
-langgraph>=0.1.0
+python-dotenv>=1.0.0
+requests>=2.31.0
+aiohttp>=3.9.0
 pydantic>=2.0.0
 typing-extensions>=4.0.0
+
+# Slack API
+slack-sdk>=3.26.0
+
+# Notion API
+notion-client>=2.2.1
+
+# Gmail API
+google-auth>=2.22.0
+google-auth-oauthlib>=1.0.0
+google-auth-httplib2>=0.1.0
+google-api-python-client>=2.100.0
 
 # AI/ML libraries
 openai>=1.0.0
@@ -15,6 +26,27 @@ cohere>=4.0.0
 # HippoRAG for knowledge graph
 hipporag>=2.0.0a3
 
+# HippoRAG specific dependencies
+litellm>=1.73.1
+vllm>=0.6.6.post1
+gritlm>=1.0.2
+networkx>=3.4.2
+python_igraph>=0.11.8
+tenacity>=8.5.0
+tiktoken>=0.7.0
+nest_asyncio
+numpy
+scipy
+einops
+boto3
+
+# LangChain
+langchain>=0.1.0
+langchain-openai>=0.1.0
+langchain-community>=0.1.0
+langchain-core>=0.1.0
+langgraph>=0.1.0
+
 # Vector databases
 chromadb>=0.4.0
 pinecone-client>=2.2.0
@@ -22,34 +54,36 @@ weaviate-client>=3.25.0
 pymilvus>=2.3.0
 qdrant-client>=1.7.0
 
-# Web scraping
-requests>=2.31.0
-beautifulsoup4>=4.12.0
+# Web scraping and automation
 selenium>=4.15.0
+webdriver-manager>=4.0.0
+beautifulsoup4>=4.12.0
 playwright>=1.40.0
 scrapy>=2.11.0
 requests-html>=0.10.0
 
-# Text processing
+# Text processing and evaluation
 nltk>=3.8.0
 spacy>=3.7.0
 transformers>=4.35.0
 sentence-transformers>=2.2.0
+torch>=2.1.0
+bert-score>=0.3.13
+rouge-score>=0.1.2
 
 # Audio processing
 elevenlabs>=0.2.0
 azure-cognitiveservices-speech>=1.31.0
 pydub>=0.25.0
 librosa>=0.10.0
+wave>=0.0.2
 
 # MCP (Model Context Protocol)
 mcp>=1.0.0
 
-# Utilities
-python-dotenv>=1.0.0
-pyyaml>=6.0.0
-aiohttp>=3.9.0
-asyncio>=3.4.3
+# Data processing
+PyYAML>=6.0.1
+json-logging>=1.3.0
 loguru>=0.7.0
 tqdm>=4.66.0
 
