--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,13 @@ scipy
 einops
 boto3
 
+# Additional dependencies discovered during execution
+ipdb>=0.13.0
+pandas>=2.0.0
+matplotlib>=3.7.0
+seaborn>=0.12.0
+plotly>=5.15.0
+
 # LangChain
 langchain>=0.1.0
 langchain-openai>=0.1.0
@@ -65,11 +72,13 @@ requests-html>=0.10.0
 # Text processing and evaluation
 nltk>=3.8.0
 spacy>=3.7.0
-transformers>=4.35.0
+transformers>=4.45.2
 sentence-transformers>=2.2.0
-torch>=2.1.0
+torch>=2.5.1
 bert-score>=0.3.13
 rouge-score>=0.1.2
+datasets>=2.14.0
+accelerate>=0.20.0
 
 # Audio processing
 elevenlabs>=0.2.0
@@ -80,6 +89,10 @@ wave>=0.0.2
 
 # MCP (Model Context Protocol)
 mcp>=1.0.0
+mcp-server-slack>=0.1.0
+mcp-server-notion>=0.1.0
+mcp-server-gmail>=0.1.0
+mcp-server-docs>=0.1.0
 
 # Data processing
 PyYAML>=6.0.1
